fixed navbar checked overlap bug

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -257,6 +257,20 @@ h2, .h2 {
 		-o-transition: none;
 		}	
 
+		#menu-toggle:checked ~ .navbar-nav {
+		box-sizing: border-box;
+		width: auto;
+		position: relative;
+		background-color: #263A4A;
+		left: 0;
+		transition: none;
+		-webkit-transition: none;
+		-moz-transition: none;
+		-ms-transition: none;
+		-o-transition: none;
+		}	
+
+
 	.navbar-default .navbar-brand {
 		margin-top: 0;
 	}
